Added Vulkan artifact uploading to build action

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -199,12 +199,26 @@ jobs:
                 path: .\build\bin\Release\llama.dll
                 name: llama-bin-win-vulkan-x64.dll
                 if-no-files-found: error
-          - name: Upload llama artifacts (Windows)
+          - name: Upload ggml artifacts (Windows)
             if: ${{ matrix.os == 'windows-latest' }}
             uses: actions/upload-artifact@v4
             with:
                 path: .\build\bin\Release\ggml.dll
                 name: ggml-bin-win-vulkan-x64.dll
+                if-no-files-found: error
+          - name: Upload ggml-base artifacts (Windows)
+            if: ${{ matrix.os == 'windows-latest' }}
+            uses: actions/upload-artifact@v4
+            with:
+                path: .\build\bin\Release\ggml-base.dll
+                name: ggml-base-bin-win-vulkan-x64.dll
+                if-no-files-found: error
+          - name: Upload ggml-vulkan artifacts (Windows)
+            if: ${{ matrix.os == 'windows-latest' }}
+            uses: actions/upload-artifact@v4
+            with:
+                path: .\build\bin\Release\ggml-vulkan.dll
+                name: ggml-vulkan-bin-win-vulkan-x64.dll
                 if-no-files-found: error
           - name: Upload llava artifacts (Windows)
             if: ${{ matrix.os == 'windows-latest' }}
@@ -227,6 +241,20 @@ jobs:
               path: ./build/ggml/src/libggml.so
               name: ggml-bin-linux-vulkan-x64.so
               if-no-files-found: error
+          - name: Upload ggml-base artifacts (Linux)
+            if: ${{ matrix.os == 'ubuntu-22.04' }}
+            uses: actions/upload-artifact@v4
+            with:
+                path: .\build\bin\Release\ggml-base.so
+                name: ggml-base-bin-linux-vulkan-x64.so
+                if-no-files-found: error
+          - name: Upload ggml-vulkan artifacts (Linux)
+            if: ${{ matrix.os == 'ubuntu-22.04' }}
+            uses: actions/upload-artifact@v4
+            with:
+                path: .\build\bin\Release\ggml-vulkan.so
+                name: ggml-vulkan-bin-linux-vulkan-x64.so
+                if-no-files-found: error
           - name: Upload llava artifacts (Linux)
             if: ${{ matrix.os == 'ubuntu-22.04' }}
             uses: actions/upload-artifact@v4
@@ -351,6 +379,7 @@ jobs:
           cd build
           cmake .. ${{ env.COMMON_DEFINE }} ${{ matrix.defines }}
           cmake --build . --config Release -j ${env:NUMBER_OF_PROCESSORS}
+          ls .
       - name: Upload ggml
         uses: actions/upload-artifact@v4
         with:
@@ -550,11 +579,15 @@ jobs:
 
           # Windows Vulkan
           cp artifacts/ggml-bin-win-vulkan-x64.dll/ggml.dll           deps/vulkan/ggml.dll
+          cp artifacts/ggml-base-win-vulkan-x64.dll/ggml-base.dll     deps/vulkan/ggml-base.dll
+          cp artifacts/ggml-vulkan-win-vulkan-x64.dll/ggml-vulkan.dll deps/vulkan/ggml-vulkan.dll
           cp artifacts/llama-bin-win-vulkan-x64.dll/llama.dll         deps/vulkan/llama.dll
           cp artifacts/llava-bin-win-vulkan-x64.dll/llava_shared.dll  deps/vulkan/llava_shared.dll
             
           # Linux Vulkan
           cp artifacts/ggml-bin-linux-vulkan-x64.so/libggml.so           deps/vulkan/libggml.so
+          cp artifacts/ggml-base-linux-vulkan-x64.so/libggml-base.so     deps/vulkan/libggml-base.so
+          cp artifacts/ggml-base-linux-vulkan-x64.so/libggml-vulkan.so   deps/vulkan/libggml-vulkan.so
           cp artifacts/llama-bin-linux-vulkan-x64.so/libllama.so         deps/vulkan/libllama.so
           cp artifacts/llava-bin-linux-vulkan-x64.so/libllava_shared.so  deps/vulkan/libllava_shared.so
 
