--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -386,6 +386,18 @@ jobs:
             path: ./build/ggml/src/libggml.dylib
             name: ggml-bin-osx-${{ matrix.build }}.dylib
             if-no-files-found: error
+      - name: Upload ggml-base
+        uses: actions/upload-artifact@v4
+        with:
+            path: ./build/ggml/src/libggml-base.dylib
+            name: ggml-base-bin-osx-${{ matrix.build }}.dylib
+            if-no-files-found: error
+      - name: Upload ggml-cpu
+        uses: actions/upload-artifact@v4
+        with:
+            path: ./build/ggml/src/libggml-cpu.dylib
+            name: ggml-cpu-bin-osx-${{ matrix.build }}.dylib
+            if-no-files-found: error
       - name: Upload llama
         uses: actions/upload-artifact@v4
         with:
@@ -534,15 +546,21 @@ jobs:
 
           # MacOS
           cp artifacts/ggml-bin-osx-arm64.dylib/libggml.dylib           deps/osx-arm64/libggml.dylib
+          cp artifacts/ggml-base-bin-osx-arm64.dylib/libggml-base.dylib deps/osx-arm64/libggml-base.dylib
+          cp artifacts/ggml-cpu-bin-osx-arm64.dylib/libggml-cpu.dylib   deps/osx-arm64/libggml-cpu.dylib
           cp artifacts/llama-bin-osx-arm64.dylib/libllama.dylib         deps/osx-arm64/libllama.dylib
           cp artifacts/llava-bin-osx-arm64.dylib/libllava_shared.dylib  deps/osx-arm64/libllava_shared.dylib
           cp artifacts/ggml-metal.metal/ggml-metal.metal                deps/osx-arm64/ggml-metal.metal
             
           cp artifacts/ggml-bin-osx-x64.dylib/libggml.dylib             deps/osx-x64/libggml.dylib
+          cp artifacts/ggml-base-bin-x64-arm64.dylib/libggml-base.dylib deps/osx-x64/libggml-base.dylib
+          cp artifacts/ggml-cpu-bin-x64-arm64.dylib/libggml-cpu.dylib   deps/osx-x64/libggml-cpu.dylib
           cp artifacts/llama-bin-osx-x64.dylib/libllama.dylib           deps/osx-x64/libllama.dylib
           cp artifacts/llava-bin-osx-x64.dylib/libllava_shared.dylib    deps/osx-x64/libllava_shared.dylib
             
           cp artifacts/ggml-bin-osx-x64-rosetta2.dylib/libggml.dylib          deps/osx-x64-rosetta2/libggml.dylib
+          cp artifacts/ggml-base-bin-x64-rosetta2.dylib/libggml-base.dylib    deps/osx-x64-rosetta2/libggml-base.dylib
+          cp artifacts/ggml-cpu-bin-x64-rosetta2.dylib/libggml-cpu.dylib     deps/osx-x64-rosetta2/libggml-cpu.dylib
           cp artifacts/llama-bin-osx-x64-rosetta2.dylib/libllama.dylib        deps/osx-x64-rosetta2/libllama.dylib
           cp artifacts/llava-bin-osx-x64-rosetta2.dylib/libllava_shared.dylib deps/osx-x64-rosetta2/libllava_shared.dylib
 
