--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -341,6 +341,7 @@ jobs:
           path: .\build\bin\Release\llava_shared.dll
           name: llava-bin-win-cublas-cu${{ matrix.cuda }}-x64.dll
           if-no-files-found: error
+
       - name: Upload artifacts (Linux)
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v4
@@ -354,6 +355,20 @@ jobs:
         with:
           path: ./build/ggml/src/libggml.so
           name: ggml-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
+          if-no-files-found: error
+      - name: Upload artifacts ggml-base (Linux)
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./build/ggml/src/libggml-base.so
+          name: ggml-base-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
+          if-no-files-found: error
+      - name: Upload artifacts ggml-cuda (Linux)
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./build/ggml/src/ggml-cuda/libggml-cuda.so
+          name: ggml-cuda-bin-linux-cublas-cu${{ matrix.cuda }}-x64.so
           if-no-files-found: error
       - name: Upload llava artifacts (Linux)
         if: ${{ matrix.os == 'ubuntu-20.04' }}
@@ -605,17 +620,17 @@ jobs:
           cp artifacts/llava-bin-win-cublas-cu12.2.0-x64.dll/llava_shared.dll   deps/cu12.2.0/llava_shared.dll
 
           # Linux CUDA
-          cp artifacts/ggml-bin-linux-cublas-cu11.7.1-x64.so/libggml.so           deps/cu11.7.1/libggml.so
-          cp artifacts/ggml-base-bin-linux-cublas-cu11.7.1-x64.so/ggml-base.so    deps/cu11.7.1/libggml-base.so
-          cp artifacts/ggml-cuda-bin-linux-cublas-cu11.7.1-x64.so/ggml-cuda.so    deps/cu11.7.1/libggml-cuda.so
-          cp artifacts/llama-bin-linux-cublas-cu11.7.1-x64.so/libllama.so         deps/cu11.7.1/libllama.so
-          cp artifacts/llava-bin-linux-cublas-cu11.7.1-x64.so/libllava_shared.so  deps/cu11.7.1/libllava_shared.so
+          cp artifacts/ggml-bin-linux-cublas-cu11.7.1-x64.so/libggml.so              deps/cu11.7.1/libggml.so
+          cp artifacts/ggml-base-bin-linux-cublas-cu11.7.1-x64.so/libggml-base.so    deps/cu11.7.1/libggml-base.so
+          cp artifacts/ggml-cuda-bin-linux-cublas-cu11.7.1-x64.so/libggml-cuda.so    deps/cu11.7.1/libggml-cuda.so
+          cp artifacts/llama-bin-linux-cublas-cu11.7.1-x64.so/libllama.so            deps/cu11.7.1/libllama.so
+          cp artifacts/llava-bin-linux-cublas-cu11.7.1-x64.so/libllava_shared.so     deps/cu11.7.1/libllava_shared.so
 
-          cp artifacts/ggml-bin-linux-cublas-cu12.2.0-x64.so/libggml.so           deps/cu12.2.0/libggml.so
-          cp artifacts/ggml-base-bin-linux-cublas-cu12.2.0-x64.so/ggml-base.so    deps/cu12.2.0/libggml-base.so
-          cp artifacts/ggml-cuda-bin-linux-cublas-cu12.2.0-x64.so/ggml-cuda.so    deps/cu12.2.0/libggml-cuda.so
-          cp artifacts/llama-bin-linux-cublas-cu12.2.0-x64.so/libllama.so         deps/cu12.2.0/libllama.so
-          cp artifacts/llava-bin-linux-cublas-cu12.2.0-x64.so/libllava_shared.so  deps/cu12.2.0/libllava_shared.so
+          cp artifacts/ggml-bin-linux-cublas-cu12.2.0-x64.so/libggml.so              deps/cu12.2.0/libggml.so
+          cp artifacts/ggml-base-bin-linux-cublas-cu12.2.0-x64.so/libggml-base.so    deps/cu12.2.0/libggml-base.so
+          cp artifacts/ggml-cuda-bin-linux-cublas-cu12.2.0-x64.so/libggml-cuda.so    deps/cu12.2.0/libggml-cuda.so
+          cp artifacts/llama-bin-linux-cublas-cu12.2.0-x64.so/libllama.so            deps/cu12.2.0/libllama.so
+          cp artifacts/llava-bin-linux-cublas-cu12.2.0-x64.so/libllava_shared.so     deps/cu12.2.0/libllava_shared.so
 
           # Windows Vulkan
           cp artifacts/ggml-bin-win-vulkan-x64.dll/ggml.dll               deps/vulkan/ggml.dll
