Updated to latest set of binaries

--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>0827b2c1da</BinaryReleaseId>
+    <BinaryReleaseId>0827b2c1da-v2</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
