--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -524,11 +524,11 @@ jobs:
           mkdir --parents deps/{avx,avx2,avx512,osx-arm64,osx-x64,osx-x64-rosetta2,cu11.7.1,cu12.2.0,vulkan,android-arm64-v8a,android-x86,android-x86_64}
 
           # Linux
-          cp artifacts/ggml-bin-linux-noavx-x64.so/libggml.so           deps/libggml.so
-          cp artifacts/ggml-base-bin-linux-noavx-x64.so/libggml-base.so deps/libggml-base.so
-          cp artifacts/ggml-cpu-bin-linux-noavx-x64.so/libggml-cpu.so   deps/libggml-cpu.so
-          cp artifacts/llama-bin-linux-noavx-x64.so/libllama.so         deps/libllama.so
-          cp artifacts/llava-bin-linux-noavx-x64.so/libllava_shared.so  deps/libllava_shared.so
+          cp artifacts/ggml-bin-linux-noavx-x64.so/libggml.so           deps/noavx/libggml.so
+          cp artifacts/ggml-base-bin-linux-noavx-x64.so/libggml-base.so deps/noavx/libggml-base.so
+          cp artifacts/ggml-cpu-bin-linux-noavx-x64.so/libggml-cpu.so   deps/noavx/libggml-cpu.so
+          cp artifacts/llama-bin-linux-noavx-x64.so/libllama.so         deps/noavx/libllama.so
+          cp artifacts/llava-bin-linux-noavx-x64.so/libllava_shared.so  deps/noavx/libllava_shared.so
 
           cp artifacts/ggml-bin-linux-avx-x64.so/libggml.so             deps/avx/libggml.so
           cp artifacts/ggml-base-bin-linux-avx-x64.so/libggml-base.so   deps/avx/libggml-base.so
@@ -549,11 +549,11 @@ jobs:
           cp artifacts/llava-bin-linux-avx512-x64.so/libllava_shared.so  deps/avx512/libllava_shared.so
 
           # Windows
-          cp artifacts/ggml-bin-win-noavx-x64.dll/ggml.dll            deps/ggml.dll
-          cp artifacts/ggml-base-bin-win-noavx-x64.dll/ggml-base.dll  deps/ggml-base.dll
-          cp artifacts/ggml-cpu-bin-win-noavx-x64.dll/ggml-cpu.dll    deps/ggml-cpu.dll
-          cp artifacts/llama-bin-win-noavx-x64.dll/llama.dll          deps/llama.dll
-          cp artifacts/llava-bin-win-noavx-x64.dll/llava_shared.dll   deps/llava_shared.dll
+          cp artifacts/ggml-bin-win-noavx-x64.dll/ggml.dll            deps/noavx/ggml.dll
+          cp artifacts/ggml-base-bin-win-noavx-x64.dll/ggml-base.dll  deps/noavx/ggml-base.dll
+          cp artifacts/ggml-cpu-bin-win-noavx-x64.dll/ggml-cpu.dll    deps/noavx/ggml-cpu.dll
+          cp artifacts/llama-bin-win-noavx-x64.dll/llama.dll          deps/noavx/llama.dll
+          cp artifacts/llava-bin-win-noavx-x64.dll/llava_shared.dll   deps/noavx/llava_shared.dll
 
           cp artifacts/ggml-bin-win-avx-x64.dll/ggml.dll           deps/avx/ggml.dll
           cp artifacts/ggml-base-bin-win-avx-x64.dll/ggml-base.dll deps/avx/ggml-base.dll
