--- a/.github/workflows/release-patch-trigger.yml
+++ b/.github/workflows/release-patch-trigger.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   release-patch-trigger:
     if: contains(github.event.pull_request.labels.*.name, 'patch-release') && !contains(github.event.pull_request.labels.*.name, 'minor-release')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - uses: actions/checkout@v3
