--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   patch_release_to_nuget:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - uses: actions/checkout@v4
