Adjust to local environment.

--- a/LLama.WebAPI/appsettings.json
+++ b/LLama.WebAPI/appsettings.json
@@ -1,10 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Logging":
+  {
+    "LogLevel":
+    {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "ModelPath": "..\\LLama.Unittest\\Models\\llama-2-7b-chat.Q4_0.gguf"
+  "ModelPath": "C:\\github.com\\SciSharp\\LLamaSharp\\LLama.Unittest\\Models\\Llama-3.2-1B-Instruct-Q4_0.gguf"
 }
