--- a/LLama.Web/appsettings.json
+++ b/LLama.Web/appsettings.json
@@ -12,7 +12,7 @@
       {
         "Name": "Example LLama2-7b-Chat",
         "MaxInstances": 20,
-        "ModelPath": "..\\LLama.Unittest\\Models\\llama-2-7b-chat.Q4_0.gguf",
+        "ModelPath": "C:\\github.com\\SciSharp\\LLamaSharp\\LLama.Unittest\\Models\\Llama-3.2-1B-Instruct-Q4_0.gguf",
         "ContextSize": 2048,
         "BatchSize": 2048,
         "Threads": 4,
