--- a/LLama/LLamaSharp.csproj
+++ b/LLama/LLamaSharp.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <BinaryReleaseId>0827b2c1da-v6</BinaryReleaseId>
+    <BinaryReleaseId>6171c9d258</BinaryReleaseId>
   </PropertyGroup>
 
   <PropertyGroup>
